assets/css/main.css
@font-face {
    font-family: 'Lato';
    font-style: normal;
    font-weight: 400;
    src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v13/v0SdcGFAl2aezM9Vq_aFTQ.ttf) format('truetype');
}

/* Preserve some sanity */
.grid,
.unit {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

/* Set up some rules to govern the grid */
.grid {
    display: block;
    clear: both;
}

.grid .unit {
    float: left;
    width: 100%;
    padding: 10px;
}

/* This ensures the outer gutters are equal to the (doubled) inner gutters. */
.grid .unit:first-child {
    padding-left: 20px;
}

.grid .unit:last-child {
    padding-right: 20px;
}

/* Nested grids already have padding though, so let’s nuke it */
.unit .unit:first-child {
    padding-left: 0;
}

.unit .unit:last-child {
    padding-right: 0;
}

.unit .grid:first-child > .unit {
    padding-top: 0;
}

.unit .grid:last-child > .unit {
    padding-bottom: 0;
}

/* Let people nuke the gutters/padding completely in a couple of ways */
.no-gutters .unit,
.unit.no-gutters {
    padding: 0;
}

/* Wrapping at a maximum width is optional */
.wrap .grid,
.grid.wrap {
    max-width: 1000px;
    margin: 0 auto;
}

/* Width classes also have shorthand versions numbered as fractions
 * For example: for a grid unit 1/3 (one third) of the parent width,
 * simply apply class="w-1-3" to the element. */
.grid .whole, .grid .w-1-1 {
    width: 100%;
}

.grid .half, .grid .w-1-2 {
    width: 50%;
}

.grid .one-third, .grid .w-1-3 {
    width: 33.3332%;
}

.grid .two-thirds, .grid .w-2-3 {
    width: 66.6665%;
}

.grid .one-quarter, .grid .w-1-4 {
    width: 25%;
}

.grid .three-quarters, .grid .w-3-4 {
    width: 75%;
}

.grid .one-fifth, .grid .w-1-5 {
    width: 20%;
}

.grid .two-fifths, .grid .w-2-5 {
    width: 40%;
}

.grid .three-fifths, .grid .w-3-5 {
    width: 60%;
}

.grid .four-fifths, .grid .w-4-5 {
    width: 80%;
}

.grid .golden-small, .grid .w-g-s {
    width: 38.2716%;
}

/* Golden section: smaller piece */
.grid .golden-large, .grid .w-g-l {
    width: 61.7283%;
}

/* Golden section: larger piece */

/* Clearfix after every .grid */
.grid:before, .grid:after {
    display: table;
    content: "";
    line-height: 0;
}

.grid:after {
    clear: both;
}

/* Utility classes */
.align-center {
    text-align: center;
}

.align-left {
    text-align: left;
}

.align-right {
    text-align: right;
}

.pull-left {
    float: left;
}

.pull-right {
    float: right;
}

/* Responsive Stuff */
@media screen and (max-width: 568px) {
    /* Stack anything that isn’t full-width on smaller screens */
    .grid .unit {
        width: 100%;
        padding-left: 20px;
        padding-right: 20px;
    }

    .unit .grid .unit {
        padding-left: 0;
        padding-right: 0;
    }

    /* Sometimes, you just want to be different on small screens */
    .center-on-mobiles {
        text-align: center;
    }

    .hide-on-mobiles {
        display: none;
    }
}

/* added by me */
@media screen and (min-width: 569px) {
    .hide-on-desktops {
        display: none;
    }

    .card-content {
        padding: 10px 20px 20px;
    }
}

@media screen and (max-width: 568px) {
    .card-content {
        padding: 7px 7px 5px;
    }
}

body {
    font-family: 'Lato', sans-serif;
    font-size: 18px;
}

h1 {
    font-size: 3rem;
}

h2 {
    font-size: 2.5rem;
}

h3 {
    font-size: 1.5rem;
}

h4 {
    font-size: 1.4rem;
}

h5 {
    font-size: 1.3rem;
}

h6 {
    font-size: 1.2rem;
}

h1, h2, h3, h4, h5, h6 {
    margin: 6px 0 6px;
    font-family: 'Lato', sans-serif;
    font-weight: 500;
}

a {
    text-decoration: none;
    color: #db4646;
    cursor: pointer;
}

a:hover {
    color: #b21c1c;
}

a:active {
    color: #910b0b;
}

ul {
    list-style-type: disc;
    padding-left: 1rem;
}

ol {
    list-style-type: decimal;
    padding-left: 1rem;
}

li {
    display: list-item;
    text-align: -webkit-match-parent;
    margin: 0;
}

.github-icon:hover, .github-icon:focus, .github-icon:active {
    color: #85d063;
}

.twitter-icon:hover, .twitter-icon:focus, .twitter-icon:active {
    color: #1da0f2;
}

.mail-icon:hover, .mail-icon:focus, .mail-icon:active {
    color: #db4646;
}

.rss-icon:hover, .rss-icon:focus, .rss-icon:active {
    color: #f49c52;
}

.btn {
    border: none;
    border-radius: 2px;
    display: inline-block;
    height: 36px;
    line-height: 36px;
    padding: 0 0.6rem;
    cursor: pointer;
    transition: background-color .2s;
    vertical-align: middle;
    color: #343434;
    background-color: transparent;
    box-shadow: none;
    -webkit-tap-highlight-color: transparent;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 15px;
    font-weight: 600;
    letter-spacing: .18rem;
    font-family: 'Lato', sans-serif;
    margin: 0.4rem 0 0.4rem;
}

.github-icon, .twitter-icon, .mail-icon, .rss-icon {
    padding: 0 1rem;
}

.btn i {
    font-size: 17px;
}

.btn:focus, .btn:hover {
    background-color: rgba(0, 0, 0, 0.1);
}

.btn:active {
    background-color: rgba(0, 0, 0, 0.2);
}

.btn.disabled {
    background-color: transparent;
    color: #b3b3b3;
    cursor: default;
}

.card {
    border: 1px solid lightgrey;
    border-radius: 5px;
    margin: 10px 0 10px;
    min-height: 175px;
}

.card-content {
    margin: 0;
    min-height: calc(175px - 36px);
}

.card-action {
    border-top: 1px solid lightgrey;
    background: #f7f7e6;
    margin: 0;
    padding: 5px;
    min-height: 36px;
}

.card-action .btn {
    margin: 0
}

.card-content img {
    max-width: 100%;
}

article p {
    padding-left: 0.5rem;
}

.chip {
    display: inline-block;
    height: 30px;
    text-transform: uppercase;
    font-size: 13px;
    font-weight: 600;
    letter-spacing: .18rem;
    font-family: 'Lato', sans-serif;
    line-height: 30px;
    padding: 0 10px;
    border-radius: 15px;
    background-color: #f7f7e6;
    margin-bottom: 5px;
    margin-right: 5px;
}

.chip i {
    font-size: 17px;
}

code, kbd {
    background: #eaeaea;
    border-radius: 3px;
    line-height: 17px;
    font-family: monospace;
    font-size: 17px;
    padding: 2px 4px;
}

.fab {
    display: inline-block;
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    text-rendering: auto;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale
}

